# notifications-management/application/src/main/java/com/example/modulith/demo/notifications/management/application/usecase/SendNotificationCommandHandler.java
@@ -1,0 +1,25 @@
+package com.example.modulith.demo.notifications.management.application.usecase;
+
+import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
+
+import com.example.modulith.demo.notifications.management.application.dao.NotificationDAO;
+import com.example.modulith.demo.notifications.management.application.dao.NotificationEntity;
+import com.example.modulith.demo.notifications.management.application.domain.Notification;
+
+import lombok.RequiredArgsConstructor;
+
+@Component
+@RequiredArgsConstructor
+public class SendNotificationCommandHandler {
+
+    private final NotificationDAO notificationDAO;
+
+    @Transactional
+    public void execute(Notification notification) {
+        NotificationEntity entity = new NotificationEntity();
+        entity.setText(notification.text());
+        entity.setUserId(notification.userId());
+        notificationDAO.save(entity);
+    }
+}
